--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,12 +1,10 @@
-#conda:
-#    file: environment.yml
+version: 2
+
 python:
-    version: 3.7
-    install:
-      - requirements: requirements.txt
-    pip_install: true
+  version: 3.7
+  install:
+    - requirements: requirements.txt
 
 sphinx:
-    builder: html
-    configuration: conf.py
-    fail_on_warning: true
+  builder: html
+  configuration: docs/conf.py
